--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,3 @@
-nix_direnv_watch_file ./shell.nix
-nix_direnv_watch_file ./nix/boulder.nix
+watch_file ./shell.nix
+watch_file ./nix/boulder.nix
 use flake
